WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253570
[LFC][IFC][shape-outside] Shape shouldn't extend beyond the margin box
https://bugs.webkit.org/show_bug.cgi?id=253570
Summary
[LFC][IFC][shape-outside] Shape shouldn't extend beyond the margin box
Antti Koivisto
Reported
2023-03-08 08:38:23 PST
Clamp to the margin box.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-08 08:38:41 PST
<
rdar://problem/106429457
>
Antti Koivisto
Comment 2
2023-03-08 08:41:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11230
EWS
Comment 3
2023-03-08 09:38:37 PST
Committed
261372@main
(fde36cd63b58): <
https://commits.webkit.org/261372@main
> Reviewed commits have been landed. Closing PR #11230 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug