[LFC][IFC][shape-outside] Shape shouldn't extend beyond the margin box https://bugs.webkit.org/show_bug.cgi?id=253570 rdar://106429457

Reviewed by Alan Baradlay.

* Source/WebCore/layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::constraints const):

Clamp the shape to the margin box.
Also provide the height correctly to getExcludedInterval().

Canonical link: https://commits.webkit.org/261372@main